--- a/ISOP2P1/NS/config
+++ b/ISOP2P1/NS/config
@@ -1,10 +1,10 @@
-mesh_file = flow
+mesh_file = R
 l_tol = 1e-15
 l_Euler_tol = 1e-14      
 n_tol = 1e-15
-viscosity = 0.01
+viscosity = 0.05
 t0 = 0.0
-t1 = 200.0
+t1 = 1.0
 t = 0.0
 dt = 0.001
 CFL = 0.5
@@ -12,6 +12,6 @@ n_method = 3
 time_step_control = 0
 Stokes_init = 0
 NS_init = 0
-scheme = 2
+scheme = 1
 body_force = 0.0
 angle = 0
